# pv-astro

./: AddAdditionalAttribute.xml  AstroVizFilterMenu.xml  CMakeLists (corbett-work's conflicted copy 2011-09-11).txt  CMakeLists.txt  GadgetReader.qrc  GadgetReaderGUI.xml  GadgetReaderSM.xml  ProfileFilter.xml  RAMSES_amr_data.hh  RAMSES_hydro_data.hh  RAMSES_info.hh  RamsesReaderGUI.xml  RamsesReaderSM.xml  SQLiteReaderSM.xml  STRANGEATTRACTORS_TODO.txt  StrangeAttractorsGUI.xml  TipsyReaderSM.xml  data_iterators.hh  pqMIPDisplayPanelDecorator.cxx  pqMIPDisplayPanelDecorator.h  pqMIPDisplayPanelDecorator.ui  vtkAddAdditionalAttribute.cxx  vtkAddAdditionalAttribute.h  vtkCenterOfMassFilter.cxx  vtkCenterOfMassFilter.h  vtkFriendsOfFriendsHaloFinder.cxx  vtkFriendsOfFriendsHaloFinder.h  vtkGadgetReader.cxx  vtkGadgetReader.h  vtkGraficReader.cxx  vtkGraficReader.h  vtkMIPDefaultPainter.cxx  vtkMIPDefaultPainter.h  vtkMIPMapper.cxx  vtkMIPMapper.h  vtkMIPPainter.cxx  vtkMIPPainter.h  vtkMIPPainterPolyDataMapper.cxx  vtkMIPPainterPolyDataMapper.h  vtkMIPRepresentation.cxx  (+22 more)
AstroVizHelpersLib/: AstroVizHelpers.cxx  AstroVizHelpers.h
ColorMaps/: blue_expanse.xml  blue_expanse_rev.xml  cats_eye.xml  cats_eye_rev.xml  colormap_nebula.xml  crab_nebula.xml  crab_nebula_rev.xml  create_cmap.py  echoes_edge.xml  echoes_edge_rev.xml  expanding_bubble.xml  expanding_bubble_rev.xml  helix_nebula.xml  helix_nebula_rev.xml  hyperions_kaleidoscope.xml  hyperions_kaleidoscope_rev.xml  mineral_moon.xml  mineral_moon_rev.xml  rosette_nebula.xml  rosette_nebula_rev.xml  star_v838.xml  star_v838_rev.xml  stellar_fireworks.xml  stellar_fireworks_rev.xml  stingray_nebula.xml  stingray_nebula_rev.xml  trifids.xml  trifids_rev.xml  water_journey.xml  water_journey_rev.xml
ExamplePython/: TestGadget.py
ExamplePython/PythonAnalysis/: agn_analysis.py  unit_conversion.py  unit_conversion_newarr.py
ExamplePython/PythonAnalysis/.svn/: all-wcprops  entries
ExamplePython/PythonAnalysis/.svn/text-base/: agn_analysis.py.svn-base  convert_coords_to_kpc.py.svn-base  unit_conversion.py.svn-base
ExamplePython/Tutorials/Data/: PruneHipparcos.py  README  random.raw  simple.csv
ExamplePython/Tutorials/Docs/: EuroPythonTutorialWiki.txt
ExamplePython/Tutorials/Projects/CSV/: CSV.py
ExamplePython/Tutorials/Projects/CustomReader/: CustomReader.py  Points.py  SimplePoints.py
ExamplePython/Tutorials/Projects/Hipparcos/: Stars.py
ExamplePython/Tutorials/Projects/RawBinary/: RawBinary.py  histogram.py
Testing/: ViaLacteaTracks_small.db  coordinates.raw
fio/: fio.c  grafic2csv  test_lib  utility.c  utility.h
tipsylib/: binner.cpp
